--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,10 @@
     after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition 
     after:duration-300 after:origin-center hidden;
   }
-  nav-link-mobile {
-    @apply relative font-semibold text-black cursor-pointer text-[17px] w-fit md:block after:block after:content-[''] 
-    after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition;
+  .nav-link-mobile {
+    @apply relative mb-[2rem] font-semibold text-black cursor-pointer text-[27px] w-fit md:block after:block after:content-[''] 
+    after:absolute after:h-[3px] after:bg-red-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition 
+    after:duration-300 after:origin-center;
   }
 }
 
